--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "matheus", email = "viliczinskimatheusjose@gmail.com"},
 ]
-dependencies = ["django>=5.2.1"]
+dependencies = ["django>=5.2.1", "djangorestframework>=3.16.0"]
 requires-python = "==3.13.*"
 readme = "README.md"
 license = {text = "MIT"}
