feat: Sincronizando com CodeSandbox

--- a/.gitignore
+++ b/.gitignore
@@ -263,4 +263,9 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
+
+.pdm-python
+.venv/
+__pycache__/
+
 # End of https://www.toptal.com/developers/gitignore/api/python,django
