--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "matheus", email = "viliczinskimatheusjose@gmail.com"},
 ]
-dependencies = ["django>=5.2.1", "djangorestframework>=3.16.0"]
+dependencies = ["django>=5.2.1", "djangorestframework>=3.16.0", "djangorestframework-simplejwt>=5.5.0", "django-cors-headers>=4.7.0"]
 requires-python = "==3.13.*"
 readme = "README.md"
 license = {text = "MIT"}
