--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ exceptiongroup==1.3.0
 filelock==3.18.0
 findpython==0.6.3
 flake8==7.1.2
+gunicorn==23.0.0
 h11==0.16.0
 hishel==0.1.2
 httpcore==1.0.9
