--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dill==0.4.0
 distlib==0.3.9
 Django==5.2.1
 djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
 docstring-to-markdown==0.17
 exceptiongroup==1.3.0
 filelock==3.18.0
@@ -40,6 +41,7 @@ pycodestyle==2.12.1
 pydocstyle==6.3.0
 pyflakes==3.2.0
 Pygments==2.19.1
+PyJWT==2.9.0
 pylint==3.3.7
 pyproject_hooks==1.2.0
 python-dotenv==1.1.0
