--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dep-logic==0.5.1
 dill==0.4.0
 distlib==0.3.9
 Django==5.2.1
+django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 docstring-to-markdown==0.17
