Feat: Arrumando bug

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "estoque"
+name = "estoque_main"
 version = "0.1.0"
 description = "Default template for PDM package"
 authors = [
